[gd_scene format=3 uid="uid://dya3rcat8v3rr"]

[ext_resource type="Script" uid="uid://ogp04c0q1ny2" path="res://assets/screens/start_scene.gd" id="1_sntry"]
[ext_resource type="Texture2D" uid="uid://brvawake4p63x" path="res://assets/sprites/box_blue.png" id="2_gusdy"]
[ext_resource type="Texture2D" uid="uid://ctrwmpqxs7r5r" path="res://assets/sprites/box_yellow.png" id="3_j56i8"]
[ext_resource type="Texture2D" uid="uid://ccrdvcaq4tddx" path="res://assets/sprites/box_red.png" id="4_2y5pp"]
[ext_resource type="StyleBox" uid="uid://da10vlyohc2u7" path="res://assets/styles/btn_focus.tres" id="btn_focus"]
[ext_resource type="StyleBox" uid="uid://bouvkqd7werkv" path="res://assets/styles/btn_hover.tres" id="btn_hover"]
[ext_resource type="StyleBox" uid="uid://bera3hxn5o25q" path="res://assets/styles/btn_normal.tres" id="btn_normal"]
[ext_resource type="StyleBox" uid="uid://ckeerbpanvse6" path="res://assets/styles/btn_pressed.tres" id="btn_pressed"]

[node name="StartScene" type="Node2D" unique_id=1523391321]
script = ExtResource("1_sntry")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=357264217]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer" unique_id=852102086]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer" unique_id=463953963]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer" unique_id=1830581144]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer" unique_id=1078281430]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer" unique_id=1665066205]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 120
text = "Distribution"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/Label" unique_id=468558518]
position = Vector2(736, 35)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_gusdy")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/Label" unique_id=1188810905]
position = Vector2(1129, 34)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_j56i8")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/Label" unique_id=1568223261]
position = Vector2(914, 35)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_2y5pp")

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer" unique_id=1354233715]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer" unique_id=112003935]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("btn_normal")
theme_override_styles/pressed = ExtResource("btn_pressed")
theme_override_styles/hover = ExtResource("btn_hover")
theme_override_styles/focus = ExtResource("btn_focus")
text = "Start"

[node name="Instructions" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer" unique_id=445566778]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("btn_normal")
theme_override_styles/pressed = ExtResource("btn_pressed")
theme_override_styles/hover = ExtResource("btn_hover")
theme_override_styles/focus = ExtResource("btn_focus")
text = "How to Play"

[node name="Settings" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer" unique_id=1415349003]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("btn_normal")
theme_override_styles/pressed = ExtResource("btn_pressed")
theme_override_styles/hover = ExtResource("btn_hover")
theme_override_styles/focus = ExtResource("btn_focus")
text = "Settings"

[node name="Credits" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer" unique_id=1311149132]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("btn_normal")
theme_override_styles/pressed = ExtResource("btn_pressed")
theme_override_styles/hover = ExtResource("btn_hover")
theme_override_styles/focus = ExtResource("btn_focus")
text = "Credits"

[node name="Exit" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer" unique_id=321877885]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("btn_normal")
theme_override_styles/pressed = ExtResource("btn_pressed")
theme_override_styles/hover = ExtResource("btn_hover")
theme_override_styles/focus = ExtResource("btn_focus")
text = "Exit"

[node name="Spacer2" type="Control" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer" unique_id=1909867991]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/ButtonContainer/Exit" to="." method="_on_exit_pressed"]
